--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  /* add colors light, dark, darker*/
+}
+
+html, body {
+  min-height: 100%;
+}
+
+.wrapper {
+  background-color: rgb(209, 202, 193);
+  font-size: 18px;
+  font-weight: 600;
+}
+
+main {
+  min-height: calc(100vh - 300px);
+}
+
+a {
+  text-decoration: none;
+  color: white
 }
