--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,3 +1,21 @@
 header {
-    font-size: 22px;
+	height: 200px;
+	position: relative;
+}
+
+header img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 77%;
+	opacity: 0.73;
+}
+
+header h1 {
+	letter-spacing: 0.2rem;
+	font-size: 5rem;
+	position: relative;
+	color: var(--light);
+	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
