--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,4 +1,22 @@
-a {
-    text-decoration: none;
-    color: white
-  }
+header .nav {
+	letter-spacing: 0.05em;
+}
+
+header .nav-link {
+	text-decoration: none;
+	color: var(--light);
+	opacity: 0.6;
+	cursor: pointer;
+	text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+header .nav-link:hover {
+	color: var(--light);
+	opacity: 1;
+}
+
+header .nav-link.active {
+	color: var(--darker);
+	cursor: default;
+	text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+}
