--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: rgb(215, 215, 215);
 }
 
 :root {
@@ -13,7 +14,7 @@ html, body {
 }
 
 .wrapper {
-  background-color: rgb(209, 202, 193);
+  background-color: rgb(143, 142, 141);
   font-size: 18px;
   font-weight: 600;
 }
@@ -24,5 +25,5 @@ main {
 
 a {
   text-decoration: none;
-  color: white
 }
+
